Change incorrect github link

--- a/home.html
+++ b/home.html
@@ -63,7 +63,8 @@
             <p>Below are the links to the deployed website and the Github Repo. For more information about the architecture of this React App website, please visit README in the Github Repo.</p>
             <div class="text-center"> <a href="https://safe-brushlands-69150.herokuapp.com/ " class="btn btn-primary btn-lg active " role="button " target="_blank " aria-pressed="true ">Link to
                     the website</a>
-                <a href="https://github.com/tprasertsup/cs1300-development " class="btn btn-primary btn-lg active " role="button " target="_blank " aria-pressed="true ">Link to the Github Repo</a>
+                <a href="https://github.com/tprasertsup/cs1300-development-website" class="btn btn-primary btn-lg active " role="button " target="_blank " aria-pressed="true ">Link to
+                    the Github Repo</a>
             </div>
 
         </div>
